SONAR-8798 clean up EsTester and EsTestCluster